(rule
 (targets
   nunito.ttf
   roundor.otf
   space_mono.ttf
   space_mono_bold.ttf)
 (deps ../../assets_src/download.sh)
 (action (system ". ../../assets_src/download.sh")))

(rule
 (targets sprites.png map_stone.png)
 (action (progn
          (copy "../../assets_src/sprites.png" "sprites.png")
          (copy "../../assets_src/map_stone.png" "map_stone.png"))))
